Add "--illegal-access=permit" to java command lines.